--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
             "request": "launch",
             "mode": "exec",
             "program": "${workspaceFolder}/build/bin/app.exe",
-            "preLaunchTask": "build dev",
+            "preLaunchTask": "build",
             "cwd": "${workspaceFolder}"
         }
     ]
