--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,7 +2,28 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "build dev",
+            "label": "build",
+            "dependsOrder": "sequence",
+            "dependsOn": [
+                "tailwind-build",
+                "wails-build"
+            ]
+        },
+        {
+            "label": "tailwind-build",
+            "type": "shell",
+            "options": {
+                "cwd": "${workspaceFolder}/frontend/tailwind"
+            },
+            "command": "npx",
+            "args": [
+                "tailwindcss",
+                "-o",
+                "../src/tailwind.css",
+            ]
+        },
+        {
+            "label": "wails-build",
             "type": "shell",
             "options": {
                 "cwd": "${workspaceFolder}",
